--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <script src="script.js"></script> -->
   </head>
   <body>
-      daniel is a king
+      daniel is a king i can build websites
     <!-- page content -->
   </body>
 </html>
