added green title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <script src="script.js"></script> -->
   </head>
   <body>
-      daniel is a king i can build websites
-    <!-- page content -->
+      <h1 class="text-green">Daniel is a king</h1>
+      <p>I can build websites</p>
   </body>
 </html>
